# espansr

./: .aiignore  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  GOVERNANCE.md  README.md  VERIFY.md  install.ps1  install.sh  pyproject.toml
.claude/: settings.json
.codex/: AGENTS.md  config.toml
.github/: PULL_REQUEST_TEMPLATE.md  REVIEW_RUBRIC.md  copilot-instructions.md  maintenance-config.yml
.specify/: constitution.md
automatr_espanso/: __init__.py  __main__.py
bugs/: LOG.md
decisions/: 0001-platform-config-single-source.md  0002-template-workflow-sync-redesign.md
docs/: CLI.md  DEVELOPMENT.md  TEMPLATES.md  VERIFY.md
espansr/: __init__.py  __main__.py
governance/: CHANGE_PROTOCOL.md  POLICY_TESTS.md  REGISTRY.md
meta-prompts/: phase-10-continue.md  phase-2-compass.md  phase-6b-build-session.md  phase-7a-review-bot.md  phase-7d-review-and-ship.md  phase-8-maintain.md
scripts/: sync_discovery.py  workflow-lint.sh
specs/: 001-health-remediation-wsl-permissions-and-lint.md  1-authoring-sync-baseline.md  2-wsl-windows-path-sync-bug.md  3-wsl-espanso-dependency-onboarding.md  4-wsl-espanso-wrapper-install.md  5-remote-template-sync.md  6-commands-popup.md  7-template-workflow-sync-redesign.md  cli-colored-output.md  cli-dry-run-verbose.md  cli-tab-completion.md  espanso-launcher-trigger.md  espanso-path-consolidation.md  espansr-orchestr-connector.md  espansr-orchestratr-connector.md  gui-dark-mode.md  gui-keyboard-shortcuts.md  gui-single-screen.md  gui-status-bar-feedback.md  gui-template-preview.md  install-first-run.md  manifest-schema-alignment.md  setup-platform-resilience.md  template-import.md  toggleable-yaml-preview.md  (+3 more)
(+233 files in other folders)
