[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "automatr-espanso"
version = "0.1.0"
description = "Espanso text expansion template manager"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "PyYAML>=6.0",
    "PyQt6>=6.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-qt>=4.4",
    "ruff>=0.4",
    "black>=24.0",
]

[project.scripts]
automatr-espanso = "automatr_espanso.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["automatr_espanso*"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
