[build-system]
requires = ["setuptools>=65,<76", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "espansr"
version = "1.0.0"
description = "Espanso text expansion template manager"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "PyYAML>=6.0,<7",
    "PyQt6>=6.6,<7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9",
    "pytest-qt>=4.4,<5",
    "ruff>=0.4,<1",
    "black>=24.0,<25",
]

[project.scripts]
espansr = "espansr.__main__:main"

[project.urls]
Homepage = "https://github.com/josiahH-cf/espansr"
Repository = "https://github.com/josiahH-cf/espansr"

[tool.setuptools.packages.find]
where = ["."]
include = ["espansr*"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.black]
line-length = 100
